--- a/package.json
+++ b/package.json
@@ -3,21 +3,22 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "dotenv": "^17.2.3",
-    "ejs": "^3.1.3",
-    "express": "^4.17.1",
-    "mongodb": "^3.5.8",
-    "mongoose": "^5.9.16",
-    "multer": "^1.4.2",
-    "uuid": "^8.1.0"
-  },
-  "type": "module"
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongodb": "^6.2.0",
+    "mongoose": "^7.6.4",
+    "multer": "^1.4.4-lts.1",
+    "uuid": "^9.0.1"
+  }
 }
