feat: migrations and changes the db uri

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mongoose": "^7.6.4",
     "multer": "^1.4.4-lts.1",
     "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "migrate-mongo": "^12.1.3"
   }
 }
